# mir-compositor

./: .clang-format  CMakeLists.txt  README.md  background.cpp  background.h  main.cpp
src/: main.cpp  shell_manager.cpp  shell_manager.h
test/: tests.cpp
